# soe-protocol

./: Cargo.toml  README.md
examples/: server-actor.rs
src/: lib.rs  session.rs  socket.rs  sync_rt.rs  tokio_rt.rs
src/channel/: input.rs  output.rs
tests/: data_channel_fuzz.rs  ping_pong.rs
