[package]
name = "soe-protocol"
description = "Sony Online Entertainment protocol implementation in Rust."
authors = ["yungcomputerchair <me@ycc.dev>"]
version = "1.0.0"
edition = "2024"
rust-version = "1.88.0"
license = "MIT"
readme = "README.md"

[dependencies]
bytes = "1.11.1"
flate2 = "1.1.9"
thiserror = "2.0.18"
tokio = { version = "1", features = ["macros", "net", "rt", "sync", "time"], optional = true }

[features]
tokio = ["dep:tokio"]

[package.metadata.docs.rs]
# Document the Tokio adapters on docs.rs (they are behind the `tokio` feature).
all-features = true

[dev-dependencies]
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread", "time", "macros"] }

[[example]]
name = "server-tokio"
required-features = ["tokio"]

[[example]]
name = "client-tokio"
required-features = ["tokio"]

[[example]]
name = "server-actor"
required-features = ["tokio"]

[[example]]
name = "server-sync"

[[example]]
name = "client-sync"
